plugins {
    id 'java'
}

group 'LauncherLoader'

[compileJava, compileTestJava]*.options*.encoding = 'UTF-8'

sourceCompatibility = '1.8'
targetCompatibility = '1.8'

repositories {
    mavenCentral()
}

jar {
    manifest {
        attributes(
                'Main-Class': 'ml.luxinfine.loader.Load'
        )
    }
}
